# iamlistening

./: CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: ✨Flow.yml  👷Flow.yml  👷‍♂️Flow.yml
.registry/: Dockerfile
.requirements/: requirements.txt
docs/: .readthedocs.yaml  00_full.rst  00_index_iamlistening.rst  00_talky.rst  01_getting_started.rst  01_install.rst  01_start.rst  02_Listener.rst  02_config.rst  02_module.rst  03_module.rst  03_settings.rst  08_chat_manager.rst  08_platform_manager.rst  09_clients.rst  09_platforms.rst  IAL_01_install.rst  IAL_02_module.rst  IAL_02_settings.rst  IAL_03_module.rst  IAL_03_settings.rst  IAL_index.rst  conf.py  iamlistening.rst  index  index.rst  modules.rst
docs/_static/: custom.css
docs/_templates/: custom-class-template.rst  navbar.html
examples/: example.env  example.py  requirements.txt
iamlistening/: __init__.py  config.py  default_settings.toml  main.py
iamlistening/clients/: __init__.py  client.py  discord.py  guilded.py  lemmy.py  mastodon.py  matrix.py  revolt.py  rocket_chat.py  telegram.py  twitch.py
iamlistening/handler/: __init__.py  _client.py  client.py  discord.py  guilded.py  lemmy.py  mastodon.py  matrix.py  revolt.py  telegram.py  tradingeconomics.py  twitch.py
iamlistening/module/: __init__.py  discord.py  matrix.py  rocket_chat.py  telegram.py
iamlistening/platform/: __init__.py  chat_manager.py  discord.py  guilded.py  mastodon.py  matrix.py  platform_manager.py  revolt.py  rocket_chat.py  telegram.py  tinode.py
iamlistening/platform/clients/: __init__.py  client.py  discord.py  guilded.py  lemmy.py  mastodon.py  matrix.py  revolt.py  rocket_chat.py  telegram.py  tinode.py  twitch.py
iamlistening/protocol/: client.py  discord.py  guilded.py  lemmy.py  mastodon.py  matrix.py  revolt.py  telegram.py  twitch.py
tests/: test_unit.py  test_unit_discord.py  test_unit_exception.py  test_unit_guilded.py  test_unit_lemmy.py  test_unit_mastodon.py  test_unit_matrix.py  test_unit_revolt.py  test_unit_rocket_chat.py  test_unit_tinode.py  test_unit_twitch.py
