

[tool.poetry]
name = "iamlistening"
version = "5.3.16"
description = "A python package to interact with messaging platform."
authors = ["mraniki <8766259+mraniki@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
keywords = [
    "bot","messaging",
    "discord", "telegram","matrix",
    ]
packages = [
    {include = "iamlistening"}
]

[tool.poetry.urls]
"Changelog" =  "https://github.com/mraniki/iamlistening/blob/dev/CHANGELOG.rst"
"Support" =  "https://github.com/mraniki/iamlistening/discussions"
"Issues" =  "https://github.com/mraniki/iamlistening/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = ">=3.1.12"
loguru = ">=0.6.0"
telethon= "1.37.0"
py-cord= "2.6.1"
simplematrixbotlib= "2.10.3"
rocketchat-API= "1.33.0"
"Mastodon.py" = "1.8.1"
beautifulsoup4 = "4.12.3"
"guilded.py" = "1.13.2"
"revolt.py" = "0.2.0"
pythorhead = {version ="0.25.2", python = ">=3.10,<3.12"}
twitchio = "2.10.0"
tradingeconomics = "4.3.11"

[tool.poetry.group.dev.dependencies]
python-semantic-release = ">=8.0.8"
ruff = "^0.6.0"
black = "^24.0.0"
pre-commit = ">=3.3.1,<5.0.0"


[tool.ruff]
exclude = [
  ".github/*",
  "docs/*",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "W"
]

#ignore = ["E401","F401","F811"]
fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"


[tool.pylint.exceptions]
overgeneral-exceptions = [
    "builtins.BaseException",
    "builtins.Exception",
    "builtins.RuntimeError",
]























































































[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.11.1"
pytest-loguru = "^0.4.0"























































































[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "7.4.7"
pydata-sphinx-theme = "^0.15.0"
sphinx-hoverxref = "^1.3.0"
sphinx_copybutton = "0.5.2"
myst_parser = "^4.0.0"
sphinx_design = "^0.6.0"


[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
python_classes = "Test*"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
filterwarnings = [
    " ignore:.*U.*mode is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning",
]
addopts = """
-v
--show-capture=stderr
"""
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
    "*/config.py"
]

[tool.bandit]
exclude_dirs = ["tests","docs"]
skips = ["B101","B104"]

[tool.semantic_release]
upload_to_vcs_release = true
version_variables = ["iamlistening/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"
commit_parser = "emoji"
version_toml = [
   "pyproject.toml:tool.poetry.version",
   ]


[tool.semantic_release.commit_parser_options]
major_tags = [
    "BREAKING",
    "ðŸ’¥",
    ":boom:",
  ]
minor_tags = ["feat",
    "ðŸ¥š",":egg:",
    "ðŸš€",":rocket:",
    "ðŸ’„",":lipstick:",
    "âœ¨",":sparkles:",
]

patch_tags = ["fix","bump","Update",
    "ðŸŽ¨",":art:",
    "ðŸ›",":bug:",
    "ðŸš‘",":ambulance:",
    "âš¡",":zap:",
    "ðŸ”¥",":fire:",
    "ðŸš¨",":rotating_light:",
    "â™»ï¸",":recycle:",
    "ðŸ”§",":wrench:",
    "â¬†ï¸",":arrow_up:",
    "ðŸ©¹",":adhesive_bandage:",
    "ðŸ‘·",":construction_worker:",
    "ðŸ“",":memo:",
    "ðŸ”’",":lock:",
    "ðŸ‘½",":alien:",
    "ðŸ’¬",":speech_balloon:",
    "ðŸ¥…",":goal_net:",
    "âœ…",":white_check_mark:",
    "ðŸ³",":whale:",
    "ðŸ™ˆ",":see_no_evil:",
    "âš—ï¸",":alembic:",
    "ðŸ§",":monocle_face:",
    "ðŸ”‡",":mute:",
    "ðŸ”Š",":loud:",
]

[tool.semantic_release.changelog]
# template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "(main|master|dev)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
